# getml-relbench

./: .gitmodules  README.md  TOS.md  amazon.py  amazon2.py  az-item-churn-lgbm_tuning.py  az-item-churn-notebook.ipynb  az-item-churn.ipynb  az-item-lgbm_tuning.py  best_hm-churn.ipynb  best_hm-item.ipynb  craft_beer.ipynb  features.org  final_hm-churn-mapping.ipynb  final_hm-churn.ipynb  final_hm-item-fastboost.ipynb  final_hm-item-mapping.ipynb  final_hm-item-relboost.ipynb  final_hm-item.ipynb  final_hm-item_slower_but_better.ipynb  financial.ipynb  getml-1.5.0-py3-none-any.whl  hm-churn.ipynb  hm-item-lgbm_tuning.py  hm-item.ipynb  hm.ipynb  hm.py  hm_article_sales.py  musk_small.ipynb  pima.ipynb  pyproject.toml  rel-amazon-user-churn.ipynb
challenge/tasks/: accidents.ipynb  basketball_men.ipynb  biodegradability.ipynb  carcinogenesis.ipynb  classicmodels.ipynb  consumer_expenditures.ipynb  craft_beer.ipynb  dallas.ipynb  dcg.ipynb  employee.ipynb  financial.ipynb  fnhk.ipynb  go_sales.ipynb  grants.ipynb  imdb_ijs.ipynb  mondial.ipynb  musk_small.ipynb  mutagenesis.ipynb  northwind.ipynb  pima.ipynb  premier_league.ipynb  pub_med_diabetes.ipynb  restbase.ipynb  sakila.ipynb  sales_db.ipynb  same_gen.ipynb  seznam.ipynb  stats.ipynb  toxicology.ipynb  triazine.ipynb  uw_std.ipynb  voc.ipynb  web_kp.ipynb
challenge/utils/: __init__.py  data.py  notebook_stubs.py
challenge/utils/assets/: notebook_template.jinja2
ctu/: README.md  financial.ipynb  stats.ipynb
ctu/stubs/: financial.ipynb  pub_med_diabetes.ipynb  stats.ipynb
ctu/utils/: __init__.py  data.py  metrics.py  notebook_stubs.py
ctu/utils/assets/: notebook_template.jinja2
