[project]
name = "relbench"
version = "0.0.1"


[tool.hatch.envs.default]
installer = "uv"
python = "3.12"
dependencies = [
  "ipykernel",
  "ipython",
  "relbench @ git+https://github.com/snap-stanford/relbench.git",
  "ruff",
  "shap",
  "tdqm",
  "pandas-stubs",
  "polars",
  "ipywidgets"
]
post-install-commands = [
]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
