[project]
name = "getml-relbench"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==1.2.1",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "cairosvg>=2.7.1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "cloudpickle==3.1.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "ctu-relational==0.2.1",
    "cycler==0.12.1",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "diffusers==0.32.1",
    "duckdb==1.1.3",
    "executing==2.1.0",
    "filelock==3.16.1",
    "fonttools==4.55.3",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "getml",
    "grpcio==1.69.0",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "inflect==7.5.0",
    "ipykernel==6.29.5",
    "ipython==8.30.0",
    "ipywidgets==8.1.5",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab>=4.3.4",
    "jupyterlab-widgets==3.0.13",
    "jupytext>=1.16.6",
    "kiwisolver==1.4.8",
    "llvmlite==0.43.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "more-itertools==10.5.0",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mysql-connector-python==9.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.60.0",
    "numpy==1.26.0",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandas-stubs==2.2.3.241126",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "polars==1.16.0",
    "polars-candle==0.1.7",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "protobuf==5.29.2",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==16.1.0",
    "pygments==2.18.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-frame==0.2.3",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "regex==2024.11.6",
    "relbench==0.2.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "ruff==0.8.1",
    "safetensors==0.5.1",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentence-transformers==3.3.1",
    "setuptools==75.7.0",
    "shap==0.46.0",
    "six==1.16.0",
    "slicer==0.0.8",
    "sqlalchemy==2.0.36",
    "stack-data==0.6.3",
    "svglib>=1.5.1",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tdqm==0.0.1",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "torch-geometric==2.6.1",
    "torchvision==0.20.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.47.1",
    "typeguard==4.4.1",
    "types-pytz==2024.2.0.20241003",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "unidecode==1.3.8",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "widgetsnbextension==4.0.13",
    "yarl==1.18.3",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "markdownify>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["challenge"]

